--- a/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/GummiBearKingdom/Views/Products/Details.cshtml
@@ -68,7 +68,10 @@
                         <div class="review">
                             <h3>@review.Author</h3>
                             <h4><em>@review.Date.ToString("MMM d, yyyy h:mm tt")</em></h4>
-                            <p>@review.Rating</p>
+                            @for(var i = 0; i < review.Rating; i++)
+                            {
+                                   <strong>★</strong>
+                            }
                             <p>@review.ContentBody</p>
                         </div>
                     }
@@ -80,7 +83,12 @@
                         <div class="review">
                           <h3>@Model.Product.Reviews.ElementAt(x).Author</h3>
                           <h4><em>@Model.Product.Reviews.ElementAt(x).Date.ToString("MMM d, yyyy h:mm tt")</em></h4>
-                          <p>@Model.Product.Reviews.ElementAt(x).Rating</p>
+                          <p>
+                          @for(var i = 0; i < @Model.Product.Reviews.ElementAt(x).Rating; i++)
+                            {
+                                   <strong>★</strong>
+                            }
+                          </p>
                           <p>@Model.Product.Reviews.ElementAt(x).ContentBody</p>
                         </div>
                     }
