Remove background image from styling.

--- a/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Gummi Bear Kingdom : Products - Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<div class="container">
 <h2>@Html.DisplayFor(model => model.Name)</h2>
 <div class="form-two">
     @using (Html.BeginForm())
@@ -16,3 +16,4 @@
 </div>
 
 <p>@Html.ActionLink($"Return to {@Model.Name} details", "Details", "Products", new { id = @Model.ProductId})</p>
+</div>>
