--- a/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/GummiBearKingdom/Views/Products/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Gummi Bear Kingdom : Products - Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<div class="container">
 <div class="details-container">
     <div class="details-product">
         <h2>@Html.DisplayFor(model => model.Product.Name)</h2>
@@ -137,3 +137,4 @@
             }
     </div>
 </div>
+</div>>
