--- a/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/GummiBearKingdom/Views/Products/Index.cshtml
@@ -4,48 +4,49 @@
     ViewData["Title"] = "Gummi Bear Kingdom : Products";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
+    <p class="add-button">
+        @Html.ActionLink("Add Product", "Create")
+    </p>
 
-<p>
-    @Html.ActionLink("Add Product", "Create")
-</p>
 
+    <div class="products">
+        @foreach (var listProduct in Model)
+        {
+            <div class="products-product">
+                 <p>
+                    <a href='@Url.Action("Details", new { id = listProduct.ProductId})'>@Html.DisplayFor(modelItem => listProduct.Name)</a>
+                </p>
 
-<div class="products">
-    @foreach (var listProduct in Model)
-    {
-        <div class="products-product">
-             <p>
-                <a href='@Url.Action("Details", new { id = listProduct.ProductId})'>@Html.DisplayFor(modelItem => listProduct.Name)</a>
-            </p>
-
-            <p>
-                @Html.Raw("$")@Html.DisplayFor(modelItem => listProduct.Cost)
-            </p>
-            <p>
-              
-                 @if(listProduct.GetRating() > 0)
-                {
-                    <div class="stars">
-                      @for(var i = 0; i < Math.Floor(listProduct.GetRating()); i++)
-                      {
-                          <div class="star">
-                            <strong>★</strong>
+                <p>
+                    @Html.Raw("$")@Html.DisplayFor(modelItem => listProduct.Cost)
+                </p>
+                <p>
+                  
+                     @if(listProduct.GetRating() > 0)
+                    {
+                        <div class="stars">
+                          @for(var i = 0; i < Math.Floor(listProduct.GetRating()); i++)
+                          {
+                              <div class="star">
+                                <strong>★</strong>
+                              </div>
+                          }
+                          @if(Math.Floor(listProduct.GetRating()) + 0.5 < listProduct.GetRating())
+                          {
+                            <div class="half-star">
+                              <strong>★</strong>
+                            </div>
+                          }
+                          <div class="number">
+                            (@Html.ActionLink($"{@listProduct.Reviews.Count}", "GetAll", "Reviews", new { id = @listProduct.ProductId}))
                           </div>
-                      }
-                      @if(Math.Floor(listProduct.GetRating()) + 0.5 < listProduct.GetRating())
-                      {
-                        <div class="half-star">
-                          <strong>★</strong>
                         </div>
-                      }
-                      <div class="number">
-                        (@listProduct.GetRating())
-                      </div>
-                    </div>
-                }
-            </p>
-        </div>
-    } 
-</div> 
+                    }
+                </p>
+            </div>
+        } 
+    </div> 
 
-<p>@Html.ActionLink("Return Home", "Index", "Home")</p>
+    <p>@Html.ActionLink("Return Home", "Index", "Home")</p>
+ </div>>
