--- a/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<html>
     <head>
-        <title></title>
+        <title>@ViewData["Titl"]</title>
         <script src="https://use.fontawesome.com/2f75641b99.js"></script>
         <script src="/js/scripts.js"></script>
         <link rel="stylesheet" href="/css/master.css">
