--- a/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/GummiBearKingdom/Views/Products/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Gummi Bear Kingdom : Products";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container">
+<div class="container review-index">
     <p class="add-button">
         @Html.ActionLink("Add Product", "Create")
     </p>
@@ -44,9 +44,9 @@
                         </div>
                     }
                 </p>
-            </div>
+         </div>
         } 
+        <div class="products-product"></div>
     </div> 
 
-    <p>@Html.ActionLink("Return Home", "Index", "Home")</p>
- </div>>
+ </div> 
