--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -7,6 +7,10 @@
     margin: 0;
 }
 
+* a:hover {
+    text-decoration: none;
+}
+
 html {
     height: 100%;
     overflow: hidden;
@@ -76,10 +80,11 @@ h2 {
     color: white;
 }
 
-.container {
-    background-color: rgba(255,255,255, 0.93);
+.container {    background-color: white;
     padding: 20px;
     margin: 5%;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -138,7 +143,6 @@ textarea {
 }
 
 .container a:hover  {
-    text-decoration: underline;
     color: palevioletred;
 }
 
@@ -146,42 +150,54 @@ textarea {
     display: flex;
     flex-wrap: wrap;
     font-size: 30px;
-
+    justify-content: center;
 }
 .products:first-child {
     align-self: center;
     
 }
 
-.products .products-product {
+.products-product { 
     text-align:center;
-    /*margin-left: auto;
-    margin-right: auto;*/
     margin-top: 5px;
     margin-bottom: 5px;
-    width: 30%;
-    /*background-color: lightgoldenrodyellow;*/
+    width: 30%; 
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 25px;
     padding: 10px;
 }
 
-    .products .products-product:nth-child(5n+2) a {
-        color: #e6b800
+.products .products-product:nth-child(5n+2) a {
+    color: #e6b800;
+}
+
+    .products .products-product:nth-child(5n+2) a:hover {
+        color: palevioletred
     }
 
     .products .products-product:nth-child(5n+3) a {
         color: limegreen
     }
 
+    .products .products-product:nth-child(5n+3) a:hover {
+        color: palevioletred
+    }
+
     .products .products-product:nth-child(5n+4) a {
         color: orange
     }
 
+    .products .products-product:nth-child(5n+4) a:hover {
+        color: palevioletred
+    }
+
     .products .products-product:nth-child(5n+5) a {
         color: red
+    }
+
+    .products .products-product:nth-child(5n+5) a:hover {
+        color: palevioletred
     }
 
 #modal-review {
@@ -360,6 +376,7 @@ a {
   background-color: lightyellow;
   padding: 10px;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 img {
